--- a/aula.04/ex001.html
+++ b/aula.04/ex001.html
@@ -26,7 +26,7 @@
         window.alert('Olá, Mundo! Minha primeira mensagem em JavaScript!')
         window.confirm('Está gostande de JS')
         window.prompt('Qual é seu nome?')
+        //Você também pode colocar só a função alert, omitindo o window. exemplo: alert('Olá, Mundo!'), vai funcionar do mesmo jeito.
     </script>
-    <!--Você também pode colocar só a função alert, omitindo o window. exemplo: alert('olá mundo!'), vai funcionar do mesmo jeito.-->
 </body>
 </html>
