--- a/aula.04/ex001.html
+++ b/aula.04/ex001.html
@@ -24,8 +24,8 @@
     <!--PARTE DO JAVASCRIPT-->
     <script>
         window.alert('Olá, Mundo! Minha primeira mensagem em JavaScript!')
-        window.confirm('Está gostande de JS')
-        window.prompt('Qual é seu nome?')
+        window.confirm('Está gostande de JS')//Vai dar a opção "ok ou cancelar"
+        window.prompt('Qual é seu nome?') //Vai comentar o nome
         //Você também pode colocar só a função alert, omitindo o window. exemplo: alert('Olá, Mundo!'), vai funcionar do mesmo jeito.
     </script>
 </body>
